修正Util_GetResourcePath()中的错误。 函数应该返回目录，并且结尾没有反斜杠。

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 需要修复和添加的东东：
+ * add 添加
+ * fix 修正
+ * evo 演变方向
 
 - add: 天空云彩动画
 - add: 主角静止时的动画（挠头等）
@@ -9,6 +12,9 @@
 - fix: 罗盘不能正确显示坐标
 - add: 开场动画
 - fix: 在客栈里休息后不会回复状态
-- fix: 读取进度后画面先显示屏幕才变黑，应该是屏幕先变黑再显示画面。
+o fix: 读取进度后画面先显示屏幕才变黑，应该是屏幕先变黑再显示画面。
 - fix: 进入场景后如果BGM没有改变，则音乐会淡出，然后声音突然变大。
 - fix: 添加新事件的功能已经删除，需要须改地图数据，把河洛客栈的韦大宝也删除掉。
+- evo: 减少Lua脚本中对资源的管理责任，Lua写作者的主要精力应该放在游戏性上面，
+       而不是资源管理等底层的操作。
+- evo: 头像贴图可以用引用计数的方法管理，因为加载不频繁，且数据量不大。
